--- a/README
+++ b/README
@@ -3,21 +3,21 @@
 
 #+SUBTITLE: Maxwell Equations of Software
 
-[[https://www.gnu.org/software/mes][GNU Mes]] brings a [[http://joyofsource.com/reduced-binary-seed-bootstrap.html][Reduced Binary Seed bootstrap]] to [[https://www.gnu.org/software/guix][GNU Guix]].  This
-bootstrap has halved the size of opaque, uninspectable binaries that
-were needed to bootstrap Guix.  The final goal is to help create a full
-source bootstrap as part of the [[http://bootstrappable.org][bootstrappable builds]] effort for any
-interested UNIX-like operating system.
+[[https://www.gnu.org/software/mes][GNU Mes]] is a Scheme interpreter and C compiler for bootstrapping the GNU
+system.  Since version 0.20 it brings a [[https://guix.gnu.org/blog/2019/guix-reduces-bootstrap-seed-by-50/][Reduced Binary Seed bootstrap]] to
+[[https://www.gnu.org/software/guix][GNU Guix]].  This bootstrap has halved the size of opaque, uninspectable
+binaries that were needed to bootstrap Guix 1.0.  The final goal is to
+help create a full source bootstrap as part of the [[http://bootstrappable.org][bootstrappable builds]]
+effort for UNIX-like operating systems.
 
 Mes consists of a mutual self-hosting Scheme interpreter written in
-~5,000 LOC of simple C and a Nyacc-based C compiler written in Scheme.
-This mes.c is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
+~5,000 LOC of simple C, and a C compiler written in Scheme.  This mes.c
+is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
-The Scheme interpreter (mes.c) has a Garbage Collector, a library of
-loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre-R6RS
-[[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]] --and test
-suite just barely enough to support a simple REPL and simple
-C-compiler: MesCC.
+The Scheme interpreter has a Garbage Collector, a library of loadable
+Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]], Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable
+syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]] --and test suite just
+enough to support a REPL and a C99 compiler: MesCC.
 
 Mes+MesCC can compile an only [[http://gitlab.com/janneke/tinycc][lightly patched TinyCC]] that is
 self-hosting.  Using this tcc and the Mes C library we now have a
@@ -64,16 +64,17 @@ General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING
 
 * Links
   [0] https://www.gnu.org/software/mes
-  [1] https://www.gnu.org/software/guix
-  [2] http://bootstrappable.org
-  [3] https://github.com/oriansj/mes-m2
-  [4] https://github.com/oriansj/m2-planet
-  [5] https://github.com/schemeway/lalr-scm
-  [6] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
-  [7] https://www.nongnu.org/nyacc
-  [8] http://gitlab.com/janneke/tinycc
-  [9] [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf]]
-  [10] https://github.com/oriansj/stage0
+  [1] https://guix.gnu.org/blog/2019/guix-reduces-bootstrap-seed-by-50/
+  [2] https://www.gnu.org/software/guix
+  [3] https://bootstrappable.org
+  [4] https://github.com/oriansj/mes-m2
+  [5] https://github.com/oriansj/m2-planet
+  [6] https://github.com/schemeway/lalr-scm
+  [7] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
+  [8] https://www.nongnu.org/nyacc
+  [9] https://gitlab.com/janneke/tinycc
+  [10] [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf]]
+  [11] https://github.com/oriansj/stage0
 
 * Legalese
 Copyright © 2016,2017,2018,2019 Jan (janneke) Nieuwenhuizen <[[mailto:janneke@gnu.org][janneke@gnu.org]]>
