--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@
 #+TITLE: GNU Mes NEWS – history of user-visible changes
 #+STARTUP: content hidestars
 
-Copyright © 2016,2017,2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
+Copyright © 2016,2017,2018,2019 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -10,6 +10,23 @@ Copyright © 2016,2017,2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
 
 Please send Mes bug reports to bug-mes@gnu.org.
 
+* Changes in 0.21 since 0.20
+** Core
+*** Mes can now be bootstrapped with Gash and Gash Core Utils.
+*** Mes now supports a Scheme-only bootstrap.
+*** Mes now supports -c EXPR.
+** MesCC
+*** Mes C Library now supports bootstrapping GNU Awk, GNU Bash, GNU SED, and GNU Tar.
+*** Mes C Library now has limited float support in vfprintf, vsnprintf, vsscanf.
+**** 7 new functions
+abtod, atof, creat, dtoab, execlp, isgraph, mknod, readlink, strtod,
+symblink.
+**** 5 new stubs
+getgrgid, getgrnam, getpgid, getpgrp, mktime, setgrent.
+** Noteworthy bug fixes
+*** A bug with `mes -c EXPR' has been fixed.
+*** The REPL now works again on x86_64.
+*** --with-system-libc now works again.
 * Changes in 0.20 since 0.19
 ** Core
 *** The build system has been simplified, again.
